src/test/resources/amyc/typer/passing/MatchWithError.amy
object Match2
  val a: Int(32) = 1 match {
    case x => error("")
  };
  a
end Match2
