src/test/resources/amyc/typer/failing/LetError1.grading.amy
object LetError1
  fn test(): Int(32) = {
    val x: Int(32) = 1;
    false
  }
end LetError1
